--- a/Aspect based Senti analysis/aws/finalreviewscraper/index.html
+++ b/Aspect based Senti analysis/aws/finalreviewscraper/index.html
@@ -117,7 +117,7 @@
             <hr>
             <div class="col-lg-12">
                 <div class="col-md-4">
-                    <p class="muted pull-right">Developed by Jitendra Kalyan, Pranith Kumar.</p>
+                    <p class="muted pull-right">Developed by Pranith Kumar, Jitendra Kalyan.</p>
                 </div>
             </div>
         </div>
